# GL-Experiment

./: CMakeLists.txt  README.md
include/: sb7.h  sb7color.h  sb7ext.h  sb7ktx.h  shader.h
include/GL/: glext.h
lib/: libglfw.dylib  libsb7.dylib
